# java-code-chunker

./: .gitignore  README.adoc  README.md  TODO.adoc  build_java-code-chunker_toolbox.sh  java-code-chunker.py  main.py  pyproject.toml
info/: README.adoc  TODO.adoc  java-code-chunker.py
setup/: README.adoc  build_data-chunker_toolbox.sh  build_java-code-chunker_toolbox.sh
src/: java_code_chunker.py
src/data_chunker/: java_code.py  parser.py
training/: unit-test.prompt
training/test/: CompilationUnit.output
