[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "java-code-chunker"
version = "0.1"
authors = [
    { name="Chris Mills", email="cmills@breakfreesolutions.com"}
]
description = "Chunks Java type and member code extracts into a list made up of indexable dictionaries."
readme = "README.adoc"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "javalang",
    "sys",
    "pathlib",
]

[project.urls]
"Homepage" = "https://github.com/break-free/java-code-chunker"
"Issues" = "https://github.com/break-free/java-code-chunker/issues"

